--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@ nav a:hover {
   <section class="hero">
     <div class="hero-content">
       <h1>Welcome to PrintExpress shop</h1>
-      <p>Your one-stop printing solution for flyers, tarpaulin, invitations, ID, Laminations and more. 
+      <p>Your one-stop printing solution for tarpaulin, invitations, business cards, customize shirts and more. 
       High quality prints, fast service, and friendly staff.</p>
       <a href="services.html" class="btn">See Our Services</a>
     </div>
   </section>
 </body>
 </html>
+
